<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_name_semi"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/project_name"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/project_category_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_category"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/project_description_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_description"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/project_customers_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectCustomers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_customers"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/project_organisation_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectOrganisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_organisation"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>