<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="20sp"
        android:id="@+id/taskName"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_date_start"
        android:textSize="20sp"
        android:id="@+id/taskDateStart"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_date_end"
        android:textSize="20sp"
        android:id="@+id/taskDateEnd"
        android:textColor="@color/colorPrimaryDark"/>
</LinearLayout>