<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/project_name_semi"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_edit"
                android:drawableRight="@drawable/ic_edit"
                android:gravity="center"
                android:text="@string/project_name"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/project_category_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_edit"
                android:drawableRight="@drawable/ic_edit"
                android:gravity="center"
                android:text="@string/project_category"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/project_description_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_edit"
                android:drawableRight="@drawable/ic_edit"
                android:gravity="center"
                android:text="@string/project_description"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/project_customers_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectCustomers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_edit"
                android:drawableRight="@drawable/ic_edit"
                android:gravity="center"
                android:text="@string/project_customers"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/project_organisation_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/projectOrganisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_edit"
                android:drawableRight="@drawable/ic_edit"
                android:gravity="center"
                android:text="@string/project_organisation"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/project_admin_sem"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/adminImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_person" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/adminName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Admin name"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/adminLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Admin last name"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/adminPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Admin Phone number"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/adminEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Admin Email"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>