<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimaryDark">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:text="@string/add_group_to_project"
            android:gravity="center"/>
    </android.support.v7.widget.CardView>
<Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/groupSpinner"
    android:layout_marginTop="20dp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/add_group"
        android:background="@null"
        android:textColor="@color/colorWhite"
        android:id="@+id/buttonSave"
        android:layout_toStartOf="@id/buttonCancel"
        android:layout_marginEnd="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/cancel"
        android:background="@null"
        android:id="@+id/buttonCancel"
        android:textColor="@color/colorWhite"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
</LinearLayout>